<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LifecycleActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_enter"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="20dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/football_is_coming_home"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:inputType="number"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:id="@+id/input_first"/>

    <EditText
        android:id="@+id/input_second"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/its_coming_home"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:inputType="number"
        android:gravity="center_horizontal"
        android:textSize="14sp"

        />

    <TextView
        android:id="@+id/label_result"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/umbusovanovi"
        />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/send"
        />

    <Button
        android:id="@+id/btn_mail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/email"/>

</LinearLayout>