<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ComposeMailActivity">

    <EditText
        android:id="@+id/receiver"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/send_to"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:inputType="textEmailAddress"
        android:gravity="center_horizontal"
        android:textSize="14sp"

        />

    <EditText
        android:id="@+id/subject"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:inputType="textEmailSubject"
        android:gravity="center_horizontal"
        android:textSize="14sp"

        />

    <EditText
        android:id="@+id/body"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:hint="@string/e_mail_text"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:inputType="textMultiLine"
        android:gravity="center_horizontal"
        android:textSize="14sp"

        />

    <Button
        android:id="@+id/send_mail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/send_mail"/>



</LinearLayout>